<resources>
    <string name="app_name">MaxbApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Contacts</string>
    <string name="second_fragment_label"> </string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="current">Current</string>

    <string name="username">Mohamed Elagamy</string>
    <string name="userphone">+201025933744</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="form_username">Name</string>
    <string name="form_tele">Tele</string>
    <string name="telephone">Telephone</string>
    <string name="save">save</string>
    <string name="please_fill_form">please fill the form</string>
    <string name="please_enter_phone">please enter new phone</string>
    <string name="deleted">deleted</string>
    <string name="add">add</string>
</resources>