<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ContactListFragment">

    <fragment
        android:id="@+id/ContactListFragment"
        android:name="com.example.maxbapp.ui.ContactListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_contact_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/ContactAdditionFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ContactDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/ContactAdditionFragment"
        android:name="com.example.maxbapp.ui.ContactSaveFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_contact_save">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/ContactListFragment" />
    </fragment>

    <fragment
        android:id="@+id/ContactDetailsFragment"
        android:name="com.example.maxbapp.ui.ContactDetailsFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_contatct_details">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/ContactListFragment" />
    </fragment>
</navigation>